Rename `saplang` to `sappho` everywhere.

--- a/east/Cargo.toml
+++ b/east/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "saplang-east"
+name = "sappho-east"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies.saplang-ast]
+[dependencies.sappho-ast]
 path = "../ast"
