--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,4 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dependencies.clap]
+version = "3.1.18"
+features = [
+  "derive",
+  "cargo",
+]
