--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -12,8 +12,5 @@ pathutil = "0.1.2"
 [dev-dependencies]
 derive_more = "0.99.17"
 
-[dev-dependencies.sappho-eval]
-path = "../eval"
-
-[dev-dependencies.sappho-parser]
-path = "../parser"
+[dev-dependencies.sappho-interpreter]
+path = "../interpreter"
