--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -15,6 +15,9 @@ path = "../ast"
 [dependencies.sappho-identmap]
 path = "../identmap"
 
+[dependencies.sappho-source]
+path = "../source"
+
 [dev-dependencies]
 test-case = "2.0"
 include_dir = "0.7"
