Integrate `sappho-object` into `sappho-eval`.

--- a/eval/Cargo.toml
+++ b/eval/Cargo.toml
@@ -17,6 +17,9 @@ path = "../east"
 [dependencies.sappho-identmap]
 path = "../identmap"
 
+[dependencies.sappho-object]
+path = "../object"
+
 [dev-dependencies]
 test-case = "2.0"
 
