Add `sappho elemental` command and a few more integration tests.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -15,6 +15,9 @@ features = [
   "cargo",
 ]
 
+[dependencies.sappho-east]
+path = "../east"
+
 [dependencies.sappho-interpreter]
 path = "../interpreter"
 
