--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -12,5 +12,11 @@ pathutil = "0.1.2"
 [dev-dependencies]
 derive_more = "0.99.17"
 
+[dev-dependencies.sappho-east]
+path = "../east"
+
 [dev-dependencies.sappho-interpreter]
 path = "../interpreter"
+
+[dev-dependencies.sappho-parser]
+path = "../parser"
