--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 derive_more = "0.99.17"
 log = "0.4.17"
-simple_logger = "2.1.0"
+simplelog = "0.12.0"
 
 [dependencies.clap]
 version = "3.1.18"
