Migrate `ObjectDef` from ast->gast and generalize over pure & query exprs.

--- a/gast/Cargo.toml
+++ b/gast/Cargo.toml
@@ -10,3 +10,6 @@ derive_more = "0.99.17"
 
 [dependencies.sappho-identmap]
 path = "../identmap"
+
+[dependencies.sappho-object]
+path = "../object"
