Use `derive-new` in `sappho-gast` and `sappho-object`.

--- a/gast/Cargo.toml
+++ b/gast/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 derive_more = "0.99.17"
+derive-new = "0.5.9"
 
 [dependencies.sappho-identmap]
 path = "../identmap"
