--- a/object/Cargo.toml
+++ b/object/Cargo.toml
@@ -5,5 +5,8 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies]
+derive-new = "0.5.9"
+
 [dependencies.sappho-identmap]
 path = "../identmap"
