--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -12,14 +12,11 @@ pathutil = "0.1.2"
 [dev-dependencies]
 derive_more = "0.99.17"
 
-[dev-dependencies.sappho-ast]
-path = "../ast"
-
-[dev-dependencies.sappho-east]
-path = "../east"
-
 [dev-dependencies.sappho-interpreter]
 path = "../interpreter"
 
 [dev-dependencies.sappho-parser]
 path = "../parser"
+
+[dev-dependencies.sappho-transform]
+path = "../transform"
