Introduce `sappho-fmtutil` to remove redundant `Display` for comma separated values.

--- a/gast/Cargo.toml
+++ b/gast/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2021"
 derive_more = "0.99.17"
 derive-new = "0.5.9"
 
+[dependencies.sappho-fmtutil]
+path = "../fmtutil"
+
 [dependencies.sappho-identmap]
 path = "../identmap"
 
