--- a/ast/Cargo.toml
+++ b/ast/Cargo.toml
@@ -11,6 +11,9 @@ derive_more = "0.99.17"
 [dependencies.sappho-identmap]
 path = "../identmap"
 
+[dependencies.sappho-fmtutil]
+path = "../fmtutil"
+
 [dependencies.sappho-gast]
 path = "../gast"
 
