--- a/east/Cargo.toml
+++ b/east/Cargo.toml
@@ -11,6 +11,9 @@ derive_more = "0.99.17"
 [dependencies.sappho-ast]
 path = "../ast"
 
+[dependencies.sappho-fmtutil]
+path = "../fmtutil"
+
 [dependencies.sappho-gast]
 path = "../gast"
 
