--- a/eval/Cargo.toml
+++ b/eval/Cargo.toml
@@ -15,8 +15,8 @@ path = "../ast"
 [dependencies.sappho-east]
 path = "../east"
 
-[dependencies.sappho-fmtutil]
-path = "../fmtutil"
+[dependencies.sappho-unparse]
+path = "../unparse"
 
 [dependencies.sappho-listform]
 path = "../listform"
