--- a/gast/Cargo.toml
+++ b/gast/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 derive_more = "0.99.17"
 derive-new = "0.5.9"
 
-[dependencies.sappho-fmtutil]
-path = "../fmtutil"
+[dependencies.sappho-unparse]
+path = "../unparse"
 
 [dependencies.sappho-identmap]
 path = "../identmap"
