--- a/value/Cargo.toml
+++ b/value/Cargo.toml
@@ -11,8 +11,8 @@ derive_more = "0.99.17"
 [dependencies.sappho-east]
 path = "../east"
 
-[dependencies.sappho-fmtutil]
-path = "../fmtutil"
+[dependencies.sappho-unparse]
+path = "../unparse"
 
 [dependencies.sappho-identmap]
 path = "../identmap"
