--- a/value/Cargo.toml
+++ b/value/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 [dependencies]
 derive_more = "0.99.17"
 
+[dependencies.sappho-gast]
+path = "../gast"
+
 [dependencies.sappho-east]
 path = "../east"
 
