--- a/eval/Cargo.toml
+++ b/eval/Cargo.toml
@@ -15,8 +15,8 @@ path = "../ast"
 [dependencies.sappho-east]
 path = "../east"
 
-[dependencies.sappho-gast]
-path = "../gast"
+[dependencies.sappho-astcore]
+path = "../astcore"
 
 [dependencies.sappho-unparse]
 path = "../unparse"
