--- a/eval/Cargo.toml
+++ b/eval/Cargo.toml
@@ -12,8 +12,8 @@ log = "0.4.17"
 [dependencies.sappho-ast]
 path = "../ast"
 
-[dependencies.sappho-east]
-path = "../east"
+[dependencies.sappho-ast-reduced]
+path = "../ast-reduced"
 
 [dependencies.sappho-astcore]
 path = "../astcore"
