--- a/ast/Cargo.toml
+++ b/ast/Cargo.toml
@@ -14,8 +14,8 @@ path = "../identmap"
 [dependencies.sappho-unparse]
 path = "../unparse"
 
-[dependencies.sappho-astcore]
-path = "../astcore"
+[dependencies.sappho-ast-core]
+path = "../ast-core"
 
 [dependencies.sappho-listform]
 path = "../listform"
