--- a/eval/Cargo.toml
+++ b/eval/Cargo.toml
@@ -15,8 +15,8 @@ path = "../ast"
 [dependencies.sappho-ast-reduced]
 path = "../ast-reduced"
 
-[dependencies.sappho-astcore]
-path = "../astcore"
+[dependencies.sappho-ast-core]
+path = "../ast-core"
 
 [dependencies.sappho-unparse]
 path = "../unparse"
