Add `FromIterator<Element<...>> for Object<...>` and factor out messy parser code to use it.

--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -21,6 +21,9 @@ path = "../identmap"
 [dependencies.sappho-listform]
 path = "../listform"
 
+[dependencies.sappho-object]
+path = "../object"
+
 [dependencies.sappho-source]
 path = "../source"
 
