--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "sappho-integration-tests"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+homepage.workspace = true
 
 [build-dependencies]
 indoc = "1.0.6"
