--- a/listform/Cargo.toml
+++ b/listform/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "sappho-listform"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+homepage.workspace = true
 
 [dependencies.sappho-unparse]
 path = "../unparse"
