--- a/unparse/Cargo.toml
+++ b/unparse/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "sappho-unparse"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+homepage.workspace = true
 
 [dependencies]
