--- a/value/Cargo.toml
+++ b/value/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "sappho-value"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+homepage.workspace = true
 
 [dependencies]
 derive_more = "0.99.17"
