--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -12,11 +12,6 @@ pathutil = "0.1.2"
 [dev-dependencies]
 derive_more = "0.99.17"
 
-[dev-dependencies.sappho-interpreter]
-path = "../interpreter"
-
-[dev-dependencies.sappho-parser]
-path = "../parser"
-
-[dev-dependencies.sappho-transform]
-path = "../transform"
+sappho-interpreter.workspace = true
+sappho-parser.workspace = true
+sappho-transform.workspace = true
