--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -9,23 +9,12 @@ homepage.workspace = true
 chumsky = "0.8"
 derive_more = "0.99"
 
-[dependencies.sappho-ast]
-path = "../ast"
-
-[dependencies.sappho-ast-core]
-path = "../ast-core"
-
-[dependencies.sappho-identmap]
-path = "../identmap"
-
-[dependencies.sappho-listform]
-path = "../listform"
-
-[dependencies.sappho-object]
-path = "../object"
-
-[dependencies.sappho-source]
-path = "../source"
+sappho-ast-core.workspace = true
+sappho-ast.workspace = true
+sappho-identmap.workspace = true
+sappho-listform.workspace = true
+sappho-object.workspace = true
+sappho-source.workspace = true
 
 [dev-dependencies]
 test-case = "2.0"
