--- a/ast-core/Cargo.toml
+++ b/ast-core/Cargo.toml
@@ -9,14 +9,9 @@ homepage.workspace = true
 derive_more = "0.99.17"
 derive-new = "0.5.9"
 
-[dependencies.sappho-unparse]
-path = "../unparse"
-
-[dependencies.sappho-identmap]
-path = "../identmap"
-
-[dependencies.sappho-object]
-path = "../object"
+sappho-identmap.workspace = true
+sappho-object.workspace = true
+sappho-unparse.workspace = true
 
 [dev-dependencies]
 test-case = "2.0"
