--- a/identmap/Cargo.toml
+++ b/identmap/Cargo.toml
@@ -5,8 +5,6 @@ edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 
-[dependencies.sappho-unparse]
-path = "../unparse"
-
-[dependencies.sappho-listform]
-path = "../listform"
+[dependencies]
+sappho-listform.workspace = true
+sappho-unparse.workspace = true
