--- a/transform/Cargo.toml
+++ b/transform/Cargo.toml
@@ -5,8 +5,6 @@ edition.workspace = true
 license.workspace = true
 homepage.workspace = true
 
-[dependencies.sappho-ast]
-path = "../ast"
-
-[dependencies.sappho-ast-reduced]
-path = "../ast-reduced"
+[dependencies]
+sappho-ast-reduced.workspace = true
+sappho-ast.workspace = true
