--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,17 @@ license = "gplv3"
 homepage = "https://github.com/nathan-at-least/sappho"
 
 [workspace.dependencies]
+chumsky = "0.8"
+clap = { version = "3.1.18", features = [ "derive", "cargo" ] }
+derive_more = "0.99.17"
+derive-new = "0.5.9"
+include_dir = "0.7"
+indoc = "1.0.6"
+log = "0.4.17"
+pathutil = "0.1.3"
+simplelog = "0.12.0"
+test-case = "2.0"
+
 sappho-ast-core = { path = "ast-core" }
 sappho-ast = { path = "ast" }
 sappho-ast-reduced = { path = "ast-reduced" }
