--- a/ast-core/Cargo.toml
+++ b/ast-core/Cargo.toml
@@ -6,12 +6,12 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
-derive_more = "0.99.17"
-derive-new = "0.5.9"
+derive_more.workspace = true
+derive-new.workspace = true
 
 sappho-identmap.workspace = true
 sappho-object.workspace = true
 sappho-unparse.workspace = true
 
 [dev-dependencies]
-test-case = "2.0"
+test-case.workspace = true
