--- a/ast-reduced/Cargo.toml
+++ b/ast-reduced/Cargo.toml
@@ -6,7 +6,7 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
-derive_more = "0.99.17"
+derive_more.workspace = true
 
 sappho-ast-core.workspace = true
 sappho-ast.workspace = true
@@ -15,4 +15,4 @@ sappho-object.workspace = true
 sappho-unparse.workspace = true
 
 [dev-dependencies]
-test-case = "2.0"
+test-case.workspace = true
