--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,10 +6,10 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
-derive_more = "0.99.17"
-log = "0.4.17"
-simplelog = "0.12.0"
-clap = { version = "3.1.18", features = [ "derive", "cargo" ] }
+derive_more.workspace = true
+log.workspace = true
+simplelog.workspace = true
+clap.workspace = true
 
 sappho-interpreter.workspace = true
 sappho-parser.workspace = true
