--- a/object/Cargo.toml
+++ b/object/Cargo.toml
@@ -6,7 +6,7 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
-derive-new = "0.5.9"
+derive-new.workspace = true
 
 sappho-identmap.workspace = true
 sappho-unparse.workspace = true
