--- a/value/Cargo.toml
+++ b/value/Cargo.toml
@@ -6,8 +6,8 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
-derive_more = "0.99.17"
-derive-new = "0.5.9"
+derive_more.workspace = true
+derive-new.workspace = true
 
 sappho-ast-core.workspace = true
 sappho-ast-reduced.workspace = true
