Switch away from deprecated `pathutil` to `anyhow-std`.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,6 +6,7 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
+anyhow.workspace = true
 clap.workspace = true
 derive_more.workspace = true
 log.workspace = true
