--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -6,8 +6,9 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
+anyhow-std.workspace = true
+anyhow.workspace = true
 derive_more.workspace = true
-pathutil.workspace = true
 sappho-eval.workspace = true
 sappho-parser.workspace = true
 sappho-source.workspace = true
