--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ license = "gplv3"
 homepage = "https://github.com/nathan-at-least/sappho"
 
 [workspace.dependencies]
+anyhow = "1.0.71"
+anyhow-std = "0.1.4"
 chumsky = "0.8"
 clap = { version = "3.1.18", features = [ "derive", "cargo" ] }
 derive_more = "0.99.17"
@@ -31,7 +33,6 @@ derive-new = "0.5.9"
 include_dir = "0.7"
 indoc = "1.0.6"
 log = "0.4.17"
-pathutil = "0.1.3"
 sappho-ast-core = { path = "ast-core" }
 sappho-ast = { path = "ast" }
 sappho-ast-reduced = { path = "ast-reduced" }
