--- a/source/Cargo.toml
+++ b/source/Cargo.toml
@@ -6,4 +6,5 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
-pathutil.workspace = true
+anyhow.workspace = true
+anyhow-std.workspace = true
