[no-verify] Flesh out `UnparseContainer` with `ListForm`; untested.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ chumsky = "0.8"
 clap = { version = "3.1.18", features = [ "derive", "cargo" ] }
 derive_more = "0.99.17"
 derive-new = "0.7.0"
+either = "1.13.0"
 include_dir = "0.7"
 indoc = "1.0.6"
 log = "0.4.17"
