--- a/listform/Cargo.toml
+++ b/listform/Cargo.toml
@@ -6,6 +6,7 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
+either.workspace = true
 sappho-unparse.workspace = true
 
 [dev-dependencies]
