Introduce a lower-level `SeqAndTail` structure for `ListForm`.

--- a/listform/Cargo.toml
+++ b/listform/Cargo.toml
@@ -6,6 +6,8 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
+derive-new.workspace = true
+either.workspace = true
 sappho-unparse.workspace = true
 
 [dev-dependencies]
