--- a/ast-core/Cargo.toml
+++ b/ast-core/Cargo.toml
@@ -9,8 +9,8 @@ homepage.workspace = true
 derive_more.workspace = true
 derive-new.workspace = true
 sappho-identmap.workspace = true
+sappho-legible.workspace = true
 sappho-object.workspace = true
-sappho-unparse.workspace = true
 
 [dev-dependencies]
 test-case.workspace = true
