--- a/ast-reduced/Cargo.toml
+++ b/ast-reduced/Cargo.toml
@@ -10,8 +10,8 @@ derive_more.workspace = true
 sappho-ast-core.workspace = true
 sappho-ast.workspace = true
 sappho-identmap.workspace = true
+sappho-legible.workspace = true
 sappho-object.workspace = true
-sappho-unparse.workspace = true
 
 [dev-dependencies]
 test-case.workspace = true
