--- a/ast/Cargo.toml
+++ b/ast/Cargo.toml
@@ -9,6 +9,6 @@ homepage.workspace = true
 derive_more.workspace = true
 sappho-ast-core.workspace = true
 sappho-identmap.workspace = true
+sappho-legible.workspace = true
 sappho-listform.workspace = true
 sappho-object.workspace = true
-sappho-unparse.workspace = true
