--- a/identmap/Cargo.toml
+++ b/identmap/Cargo.toml
@@ -6,5 +6,5 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
+sappho-legible.workspace = true
 sappho-listform.workspace = true
-sappho-unparse.workspace = true
