Start on ast fuzz random generation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ derive-new = "0.5.9"
 include_dir = "0.7"
 indoc = "1.0.6"
 log = "0.4.17"
+rand = "0.9.0"
 sappho-ast-core = { path = "ast/core" }
 sappho-ast-fuzz = { path = "ast/fuzz" }
 sappho-ast = { path = "ast/ast" }
