--- a/ast/fuzz/Cargo.toml
+++ b/ast/fuzz/Cargo.toml
@@ -6,3 +6,6 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
+derive-new.workspace = true
+rand.workspace = true
+sappho-ast.workspace = true
