--- a/ast/fuzz/Cargo.toml
+++ b/ast/fuzz/Cargo.toml
@@ -9,3 +9,4 @@ homepage.workspace = true
 derive-new.workspace = true
 rand.workspace = true
 sappho-ast.workspace = true
+sappho-rand-dcomp.workspace = true
