Begin implementing subsets of `Expr<FX>` in `...-ast-fuzz`.

--- a/ast/fuzz/Cargo.toml
+++ b/ast/fuzz/Cargo.toml
@@ -10,3 +10,4 @@ derive-new.workspace = true
 rand.workspace = true
 sappho-ast.workspace = true
 sappho-rand-dcomp.workspace = true
+sappho-listform.workspace = true
