Start incomplete `Expr::Core` generation.

--- a/ast/fuzz/Cargo.toml
+++ b/ast/fuzz/Cargo.toml
@@ -9,6 +9,7 @@ homepage.workspace = true
 derive-new.workspace = true
 rand.workspace = true
 sappho-ast.workspace = true
+sappho-ast-core.workspace = true
 sappho-rand-dcomp.workspace = true
 sappho-listform.workspace = true
 sappho-identmap.workspace = true
