Add `sappho fuzz` cli.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,6 +10,8 @@ anyhow.workspace = true
 clap.workspace = true
 derive_more.workspace = true
 log.workspace = true
+sappho-ast-fuzz.workspace = true
+sappho-ast.workspace = true
 sappho-interpreter.workspace = true
 sappho-parser.workspace = true
 sappho-source.workspace = true
