--- a/ast/core/Cargo.toml
+++ b/ast/core/Cargo.toml
@@ -8,6 +8,7 @@ homepage.workspace = true
 [dependencies]
 derive_more.workspace = true
 derive-new.workspace = true
+sappho-ast-effect.workspace = true
 sappho-identmap.workspace = true
 sappho-object.workspace = true
 sappho-unparse.workspace = true
