--- a/ast/fuzz/Cargo.toml
+++ b/ast/fuzz/Cargo.toml
@@ -10,6 +10,7 @@ derive-new.workspace = true
 rand.workspace = true
 sappho-ast.workspace = true
 sappho-ast-core.workspace = true
+sappho-ast-effect.workspace = true
 sappho-identmap.workspace = true
 sappho-listform.workspace = true
 sappho-object.workspace = true
