--- a/ast/reduced/Cargo.toml
+++ b/ast/reduced/Cargo.toml
@@ -8,6 +8,7 @@ homepage.workspace = true
 [dependencies]
 derive_more.workspace = true
 sappho-ast-core.workspace = true
+sappho-ast-effect.workspace = true
 sappho-ast.workspace = true
 sappho-identmap.workspace = true
 sappho-object.workspace = true
