--- a/ast/ast/Cargo.toml
+++ b/ast/ast/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 
 [dependencies]
 derive_more.workspace = true
+derive-new.workspace = true
 sappho-ast-core.workspace = true
 sappho-ast-effect.workspace = true
 sappho-identmap.workspace = true
