--- a/ast/reduced/Cargo.toml
+++ b/ast/reduced/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 
 [dependencies]
 derive_more.workspace = true
+either.workspace = true
 sappho-ast-core.workspace = true
 sappho-ast-effect.workspace = true
 sappho-ast.workspace = true
