--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
   "ast/reduced",
   "cli",
   "eval",
+  "identifier",
   "identmap",
   "integration-tests",
   "interpreter",
@@ -28,6 +29,7 @@ license = "gplv3"
 homepage = "https://github.com/nathan-at-least/sappho"
 
 [workspace.dependencies]
+aliri_braid = "0.4.0"
 anyhow = "1.0.71"
 anyhow-std = "0.1.4"
 chumsky = "0.9.3"
@@ -46,6 +48,7 @@ sappho-ast = { path = "ast/ast" }
 sappho-ast-reduced = { path = "ast/reduced" }
 sappho-cli = { path = "cli" }
 sappho-eval = { path = "eval" }
+sappho-identifier = { path = "identifier" }
 sappho-identmap = { path = "identmap" }
 sappho-integration-tests = { path = "integration-tests" }
 sappho-interpreter = { path = "interpreter" }
@@ -59,3 +62,4 @@ sappho-unparse = { path = "unparse" }
 sappho-value = { path = "value" }
 simplelog = "0.12.0"
 test-case = "2.0"
+thiserror = "2.0.11"
