Cargo skeleton for `...-attrs`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
   "ast/effect",
   "ast/fuzz",
   "ast/reduced",
+  "attrs",
   "cli",
   "eval",
   "identifier",
@@ -46,6 +47,7 @@ sappho-ast-effect = { path = "ast/effect" }
 sappho-ast-fuzz = { path = "ast/fuzz" }
 sappho-ast = { path = "ast/ast" }
 sappho-ast-reduced = { path = "ast/reduced" }
+sappho-attrs = { path = "attrs" }
 sappho-cli = { path = "cli" }
 sappho-eval = { path = "eval" }
 sappho-identifier = { path = "identifier" }
