[no-verify] Remove `...-identmap`; sar that to `...-attrs` without fixing check errors.

--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -12,7 +12,7 @@ derive_more.workspace = true
 either.workspace = true
 sappho-ast-core.workspace = true
 sappho-ast.workspace = true
-sappho-identmap.workspace = true
+sappho-attrs.workspace = true
 sappho-listform.workspace = true
 sappho-object.workspace = true
 sappho-source.workspace = true
