--- a/value/Cargo.toml
+++ b/value/Cargo.toml
@@ -10,6 +10,6 @@ derive_more.workspace = true
 derive-new.workspace = true
 sappho-ast-core.workspace = true
 sappho-ast-reduced.workspace = true
-sappho-identmap.workspace = true
+sappho-attrs.workspace = true
 sappho-object.workspace = true
 sappho-unparse.workspace = true
