--- a/ast/ast/Cargo.toml
+++ b/ast/ast/Cargo.toml
@@ -11,7 +11,7 @@ derive-new.workspace = true
 either.workspace = true
 sappho-ast-core.workspace = true
 sappho-ast-effect.workspace = true
-sappho-identmap.workspace = true
+sappho-attrs.workspace = true
 sappho-listform.workspace = true
 sappho-object.workspace = true
 sappho-unparse.workspace = true
