--- a/ast/core/Cargo.toml
+++ b/ast/core/Cargo.toml
@@ -9,7 +9,7 @@ homepage.workspace = true
 derive_more.workspace = true
 derive-new.workspace = true
 sappho-ast-effect.workspace = true
-sappho-identmap.workspace = true
+sappho-attrs.workspace = true
 sappho-object.workspace = true
 sappho-unparse.workspace = true
 
