--- a/ast/fuzz/Cargo.toml
+++ b/ast/fuzz/Cargo.toml
@@ -11,7 +11,7 @@ rand.workspace = true
 sappho-ast.workspace = true
 sappho-ast-core.workspace = true
 sappho-ast-effect.workspace = true
-sappho-identmap.workspace = true
+sappho-attrs.workspace = true
 sappho-listform.workspace = true
 sappho-object.workspace = true
 sappho-rand-dcomp.workspace = true
