--- a/ast/reduced/Cargo.toml
+++ b/ast/reduced/Cargo.toml
@@ -11,7 +11,7 @@ either.workspace = true
 sappho-ast-core.workspace = true
 sappho-ast-effect.workspace = true
 sappho-ast.workspace = true
-sappho-identmap.workspace = true
+sappho-attrs.workspace = true
 sappho-object.workspace = true
 sappho-unparse.workspace = true
 
