--- a/object/Cargo.toml
+++ b/object/Cargo.toml
@@ -7,5 +7,5 @@ homepage.workspace = true
 
 [dependencies]
 derive-new.workspace = true
-sappho-identmap.workspace = true
+sappho-attrs.workspace = true
 sappho-unparse.workspace = true
