--- a/object/Cargo.toml
+++ b/object/Cargo.toml
@@ -8,4 +8,5 @@ homepage.workspace = true
 [dependencies]
 derive-new.workspace = true
 sappho-attrs.workspace = true
+sappho-identifier.workspace = true
 sappho-unparse.workspace = true
