--- a/ast/core/Cargo.toml
+++ b/ast/core/Cargo.toml
@@ -10,6 +10,7 @@ derive_more.workspace = true
 derive-new.workspace = true
 sappho-ast-effect.workspace = true
 sappho-attrs.workspace = true
+sappho-identifier.workspace = true
 sappho-object.workspace = true
 sappho-unparse.workspace = true
 
