--- a/ast/fuzz/Cargo.toml
+++ b/ast/fuzz/Cargo.toml
@@ -12,6 +12,7 @@ sappho-ast.workspace = true
 sappho-ast-core.workspace = true
 sappho-ast-effect.workspace = true
 sappho-attrs.workspace = true
+sappho-identifier.workspace = true
 sappho-listform.workspace = true
 sappho-object.workspace = true
 sappho-rand-dcomp.workspace = true
