[no-verify] Simplify `Attrs` `Key` trait; break everything above.

--- a/attrs/Cargo.toml
+++ b/attrs/Cargo.toml
@@ -11,4 +11,4 @@ either.workspace = true
 thiserror.workspace = true
 sappho-identifier.workspace = true
 sappho-unparse.workspace = true
-array-init.workspace = true
+arrayvec.workspace = true
