[no-verify] Major refactor up through `...-transform` with failing unit tests.

--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -13,6 +13,7 @@ either.workspace = true
 sappho-ast-core.workspace = true
 sappho-ast.workspace = true
 sappho-attrs.workspace = true
+sappho-identifier.workspace = true
 sappho-listform.workspace = true
 sappho-object.workspace = true
 sappho-source.workspace = true
