--- a/transform/Cargo.toml
+++ b/transform/Cargo.toml
@@ -6,5 +6,15 @@ license.workspace = true
 homepage.workspace = true
 
 [dependencies]
+either.workspace = true
+sappho-ast-core.workspace = true
+sappho-ast-effect.workspace = true
 sappho-ast-reduced.workspace = true
 sappho-ast.workspace = true
+sappho-attrs.workspace = true
+sappho-identifier.workspace = true
+sappho-listform.workspace = true
+sappho-object.workspace = true
+
+[dev-dependencies]
+test-case.workspace = true
