[no-verify] Incomplete integration into `...-{parser,eval,value}`.

--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -11,6 +11,7 @@ chumsky.workspace = true
 derive_more.workspace = true
 either.workspace = true
 sappho-ast-core.workspace = true
+sappho-ast-effect.workspace = true
 sappho-ast.workspace = true
 sappho-attrs.workspace = true
 sappho-identifier.workspace = true
