[no-verify] Complete `cargo check` integration of new `Attrs`/`RcId` stack.

--- a/eval/Cargo.toml
+++ b/eval/Cargo.toml
@@ -9,8 +9,10 @@ homepage.workspace = true
 derive_more.workspace = true
 log.workspace = true
 sappho-ast-core.workspace = true
+sappho-ast-effect.workspace = true
 sappho-ast-reduced.workspace = true
 sappho-ast.workspace = true
+sappho-identifier.workspace = true
 sappho-listform.workspace = true
 sappho-unparse.workspace = true
 sappho-value.workspace = true
